Fix layout issues for adoption form buttons and confirmation header

--- a/src/app/pages/interest/interest.scss
+++ b/src/app/pages/interest/interest.scss
@@ -37,7 +37,9 @@
     }
 
     .flexrow {
-        display: flex;
+        display: grid;
+        grid-gap: 1rem;
+        grid-template-columns: repeat(2, auto) 1fr;
         margin-top: 4rem;
     }
 
